styles/styles.css
body {
    font-family: "Inter", sans-serif;
    background-color: #f6f7fb;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
    
    background-image: url('../pictures/pattern.svg'); 
    background-repeat: repeat; 
    background-size: auto; 

    
}
header {
    box-sizing: border-box;
    width:80%;
    height:auto;
    display:flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    
    padding:20px;
    background-color: #f6f7fb;
    box-sizing: border-box;
    

    

    
    
}
header h1 {
    font-size: 2rem;
    
}
img {
    width:100px;
    height:auto;
    
}
form {
    flex-grow:1;
     
    display: flex;
    justify-content: center;
}

.searchContainer {
    width:100%;
    position:relative;
    display:flex;
    align-items: center;
    justify-content: center;
    
    max-width: 350px;
    height:40px;
}
.searchContainer input {
    width: 100%;
    max-width: 350px;
    padding-left: 25px;
    border-radius: 4px;
    border: 1px solid #000;
    height: 40px;
    

}
.searchContainer i {
    position: absolute;
    left: 5px;
    top: 50%;
    transform: translateY(-50%);
}
.logoContainer {
    display:flex;
    align-items: center;
    justify-content: center;
    gap:20px;
    max-width: 300px;
    
    
}




.iconsContainer {
    display:flex;
    align-items: center;
    justify-content: center;
    width:100%;
    max-width: 280px;
    gap:20px;
    
    
}
.iconsContainer i {
    font-size: 30px;
}

.logoContainer object {
    color:#FFCD1F;
    width:100px;
    height:100px;
}
.vertDivider {
    width:2px;
    height:30px;
    background-color: #000;
    border-radius: 1px;
}
.aboutUs {
    padding-right: 20px;
    display:flex;
    align-items: flex-start;
    
}



.aboutUs >ul {
    display:flex;
    flex-direction: row;
}
h1  span {
    font-weight: 700;
}
nav {
    display:flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    
    width:80%;
    
}
nav ul {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    height:50px;
    width:100%;
}
nav li {
    width:100%;
    height:100%;
    display: flex;
    justify-content: center;
    align-items: center;
    
    background-color: #1e1e1e;
    color:white;
    font-weight: 700;
}
main {
    width:80%;
    height:auto;
    background-color: #f6f7fb;
    padding:2px;
    box-sizing: border-box;
    margin-bottom: 50px;
    
    
    
}

.sliderContainer {
    position: relative;
    width: 100%;
    height:auto;
    
    overflow: hidden;
    display:flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    
    
}
.slider {
    display: flex;
    overflow-x:auto;
    scroll-behavior: smooth;
    scroll-snap-type: x mandatory;
    gap: 10px;
    padding: 10px;
    width:100%;
    flex-wrap: nowrap;
    white-space: nowrap;
}
.product {
    flex: 0 0 calc(100% / 4 - 20px);
    height: 400px;
    background: #f6f7fb;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 24px;
    font-weight: bold;
    border-radius: 10px;
    scroll-snap-align: start;
    min-width: 300px;
    font-weight: 600;
    padding-left: 10px;
    

    
}
.product:hover {
    
    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
    transition: 0.1s ease-in-out;
}  
.scrollBtnLeft, .scrollBtnRight {
position: absolute;
top: 50%;
transform: translateY(-50%);
background-color: transparent;
color: #1E1E1E;
border: none;
cursor: pointer;
padding: 10px 15px;
font-size: 22px;
border-radius: 5px;
z-index:1;
}

.scrollBtnLeft:hover, .scrollBtnRight:hover {
    background-color: rgba(0, 0, 0, 0.1);
    transition: 0.15s ease;
    
}


.scrollBtnLeft {
    left:0px;
}

.scrollBtnRight {
    right:0px;
}

.slider::-webkit-scrollbar {
width: 12px;
height: 12px;
}

.slider::-webkit-scrollbar-track {
background: #f1f1f1;
border-radius: 10px;
}

.slider::-webkit-scrollbar-thumb {
background: #888;
border-radius: 10px;
}

.slider::-webkit-scrollbar-thumb:hover {
background: #555;
}

h2 {
font-size: 30px;
font-weight: 700;
padding-left: 30px;
padding-top: 30px;
padding-bottom: 30px;
}
footer {
    width:80%;
    height:auto;
    display:flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    background-color: #f6f7fb;
    
    box-sizing: border-box;
    
    
}

div.footerContainer {
    width:100%;
    height:auto;
    display:flex;
    flex-direction: row;
    justify-content: space-evenly;
    align-items: center;
    background-color: #f6f7fb;
    padding:20px;
    box-sizing: border-box;
    gap:50px;
    padding-bottom: 100px;
}
div.footerContainer >article {
    
    display:flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    
}
div.footerContainer >article >section {
    width:100%;
    display:flex;
    justify-content: center;
    align-items: center;
}
div.footerContainer >article >section >p {
    padding-left: 0;
    margin-left: 0;
    text-align: left;
}

.copyrightContainer {
    font-family: "Inter", sans-serif;
    font-weight: 600;
    font-size: 20px;
    color: #fff;
    box-shadow: 0 -5px 10px rgba(0, 0, 0, 0.1);
    width:100%;
    height:auto;
    display:flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    background-color: #E5AC00;
    padding:20px;
    box-sizing: border-box;
    gap:50px;
}


#brandInfo {
display: flex;
flex-direction: row;
justify-content: center;
align-items: flex-start;
width:80%;
height: 100px;
background-color: #f6f7fb;
box-sizing: border-box;
}
#brandLogoFooter {
display: flex;
flex-direction: column;
justify-content: center;
align-items: flex-start;
gap: 15px;
}
#brandLogoFooter img {
width: 50px;
height: auto;
}
#brandLogoFooter span {
font-weight: 700;
}
#brandLogoFooterSection {
display:flex;
flex-direction: row;
justify-content: center;
align-items: center;
gap:15px;

}

#aboutUsText{
font-weight: 600;
padding-bottom: 20px;
}

#CustomerServiceText{
font-weight: 600;
padding-bottom: 20px;
}

#aboutUsList {
display: flex;
flex-direction: column;
justify-content: center;
align-items: flex-start;
gap: 10px;
}
#customerServiceList {
display: flex;
flex-direction: column;
justify-content: center;
align-items: flex-start;
gap: 10px;
}

#brandInfoText {
text-wrap: wrap;
}

footer article {
flex:1;
}
header, nav, main, footer {
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
}

.product {
    display:flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: flex-start;
}

h3,h4,h5 {
    margin:5px;
}
h3 {
    font-size: 34px;
    margin-bottom: 0px;
    padding-bottom: 0px;
}
h4 {
    font-size: 20px;
    color:#6C757D;
    padding-bottom: 3px;
}
h5 {
    font-size: 32px;
}
.product button {
    box-sizing: border-box;
    width:90%;
    margin:5%;
    
    
    border:3px solid transparent;
    background-color: #E5AC00;
    color:white;
    font-family: "Inter", sans-serif;
    padding: 10px;
    border-radius: 10px;
    font-size: 20px;
    font-weight: 600;
    cursor: pointer;
    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.2);
    transition: all 0.2s ease-in-out;
    width:100%;
}
.product button:hover {
    box-sizing: border-box;
    
    
    border : 3px solid #E5AC00;
    background-color: white;
    color: #E5AC00;
    
    
    
}
a {
    width:90%;
    display:block;
    
}



.akatovyMed >div {
    background-image: url('../pictures/med_akat_maly-removebg-preview.png');
    
}
.medvidekTmavy >div {
    background-image: url('../pictures/medvidek_tmavy-removebg-preview.png');
    
}
.vcelarskyKlobouk >div {
    background-image: url('../pictures/vcelarsky_klobouk-removebg-preview.png');
    
}

.syto >div {
    background-image: url('../pictures/syto-removebg-preview.png');
}
.vidlickaNaOdvickovani >div {
    background-image: url('../pictures/vidlicka_na_odvickovani-removebg-preview.png');
}
.medvidekSvetly >div {
    background-image: url('../pictures/medvidek_svetly-removebg-preview.png');
}
.ochranneRukavice >div {
    background-image: url('../pictures/vcelarske_rukavice-removebg-preview.png');
}
.medomet >div {
    background-image: url('../pictures/medomet-removebg-preview.png');
}
.kartac >div {
    background-image: url('../pictures/kartac-removebg-preview.png');
}
.syto >div {
    background-image: url('../pictures/syto-removebg-preview.png');
}
.dymovnice >div {
    background-image: url('../pictures/dymovnice-removebg-preview.png');
}
.akatovyMedL >div {
    background-image: url('../pictures/med_akatl-removebg-preview.png');
}
.lipovyMed >div {
    background-image: url('../pictures/med_lipovy-removebg-preview.png');
}
.medovicovyMed >div {
    background-image: url('../pictures/med_medovicovy-removebg-preview.png');
}
.smisenyMed >div {
    background-image: url('../pictures/med_smiseny-removebg-preview.png');
}
.kvetovyMedP > div {
    background-image: url('../pictures/med_kvetovy_p-removebg-preview.png');
}




.photoContainer {
    width: 95%;
    height: 60%;
    
    
    margin: 2.5%;
    border-radius: 10px;
    background-size: contain;
    background-position: center;
    background-repeat: no-repeat;
}

#customerServiceList > li:hover, #aboutUsList > li:hover {
    cursor: pointer;
    transform: scale(1.05);
}
i:hover {
    transform: scale(0.9);
    transition: 0.1s ease;
}

nav > ul > li {
    cursor: pointer;
}

#aboutUsText, #CustomerServiceText {
    font-weight: 600;
    padding-bottom: 10px;
    text-align: left; 
}

#aboutUsList, #customerServiceList {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: flex-start;
    gap: 10px; 
}

.footerContainer {
    display: flex;
    justify-content: space-between; 
    align-items: flex-start;
    flex:1;
}
div> article >section {
    width:100%;
}
section >p {
    width:100%;
}
ul {
    width:100%;
}
.footerContainer >article >section {
    display: flex;
    justify-content: center;
    align-items: center;
    
}
#aboutUsFooter {
    padding-left: 15%;
}


a {
    text-decoration: none;
    
}

nav> ul >a {
    height:100%;
}

